# docval

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
data/: manifest_dev.jsonl  manifest_heldout.jsonl
datagen/: generate.py  scanify.py
datagen/templates/: bank_a.html  bank_b.html
docs/: DATA-REVIEW.md
docs/specs/: 2026-07-16-docval-artifact1-design.md
docs/writeups/: eval-case-study.md  video-script.md
eval/: baseline_ci.json  baseline_heldout.json  compare.py  metrics.py  run_eval.py
samples/: stmt_0001_scan.result.json
scripts/: curate_splits.py  deploy_space.sh  download_agami.py  inspect_agami.py  run_bankstatemently.py  vision_smoke.py
src/docval/: __init__.py  config.py  pipeline.py  schema.py  triage.py  validate.py
src/docval/parsers/: native.py  vision.py
tests/: test_app.py  test_bankstatemently.py  test_compare.py  test_config.py  test_datagen.py  test_import.py  test_metrics.py  test_native_parser.py  test_pipeline.py  test_scanify.py  test_schema.py  test_triage.py  test_validate.py  test_vision_parser.py
tests/fixtures/: ci_manifest.jsonl
tests/fixtures/ci_docs/: stmt_0000.json  stmt_0001.json  stmt_0002.json
