[project]
name = "docval"
version = "0.1.0"
description = "Bank-statement extraction and validation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.20.0",
    "huggingface-hub>=1.23.0",
    "jinja2>=3.1.6",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pypdfium2>=5.12.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docval", "datagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
